--- a/Dr4rum_eProjectIII/Dr4rum_eProjectIII/Views/Categories/Edit.cshtml
+++ b/Dr4rum_eProjectIII/Dr4rum_eProjectIII/Views/Categories/Edit.cshtml
@@ -5,55 +5,71 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Edit</h2>
-
-
-@using (Html.BeginForm())
-{
-    @Html.AntiForgeryToken()
-
-    <div class="form-horizontal">
-        <h4>Category</h4>
-        <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-
-        <div class="form-group">
-            <label class="control-label col-md-2"> Category Name </label>
-            <div class="col-md-10">
-                <div class="checkbox">
-                    @Html.EditorFor(model => model.Category_Name)
-                    @Html.ValidationMessageFor(model => model.Category_Name, "", new { @class = "text-danger" })
-                </div>
-            </div>
-        </div>
-        <div class="form-group" hidden>
-            @Html.LabelFor(Model => Model.SetV, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                <div class="radio">
-                    <label>@Html.RadioButtonFor(Model => Model.SetV, true, new { @checked = true })</label>
-                </div>
-            </div>
-        </div>
-        <div class="form-group">
-            <label class="control-label col-md-2">Group Name</label>
-            <div class="col-md-10">
-                @Html.DropDownList("Group_Name", null, htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.Group_Name, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-default" />
-            </div>
-        </div>
+<!-- Banner-->
+<div class="Banner-containt">
+    <img src="~/Image/Banner_Pic/Admin/adminIndex_banner.jpg" class="img-fluid" alt="Responsive image">
+    <div class="Banner-title-containt">
+        <p class="Banner-title-info"> Categories Page</p>
+        <p class="Banner-title-info" id="Banner-child"> Welcome to Categories Page, Let's manager your Page !</p>
     </div>
-}
-
-<div>
-    @Html.ActionLink("Back to List", "Index")
 </div>
+<!-- breadcrumb-->
+<div class="breadcrumb-containt">
+    <div class="btn-group btn-breadcrumb breadcrumb-primary">
+        <a href="@Url.Action("Index", "AdminIndex")" class="btn btn-primary"><img src="~/Image/Logo_Icon/home-50.png" class="navbar-logo" alt="Site Logo" /></a>
+        @Html.ActionLink("Home", "Index", "AdminIndex", null, new { @class = "btn btn-primary breadcrumb-link" })
+        <div class="btn btn-info c-info breadcrumb-link"> Edit Category </div>
+    </div>
+</div>
+<!-- Information -->
+<div class="index-list-containt">
+    <div class="index-list">
+        @using (Html.BeginForm())
+        {
+            @Html.AntiForgeryToken()
 
+        <div class="form-horizontal">
+            <h2>@Html.DisplayFor(model => model.Category_Name, new { @disabled = "disabled", htmlAttributes = new { @class = "form-control" } })</h2>
+            <hr />
+            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+
+            <div class="form-group" style="display: none">
+                <label class="control-label col-md-2"> Category Name </label>
+                <div class="col-md-10">
+                    <div class="checkbox">
+                        @Html.EditorFor(model => model.Category_Name)
+                        @Html.ValidationMessageFor(model => model.Category_Name, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+            </div>
+            <div class="form-group" hidden>
+                @Html.LabelFor(Model => Model.SetV, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    <div class="radio">
+                        <label>@Html.RadioButtonFor(Model => Model.SetV, true, new { @checked = true })</label>
+                    </div>
+                </div>
+            </div>
+            <div class="form-group">
+                <label class="control-label col-md-2">Group Name</label>
+                <div class="col-md-10">
+                    @Html.DropDownList("Group_Name", null, htmlAttributes: new { @class = "form-control" })
+                    @Html.ValidationMessageFor(model => model.Group_Name, "", new { @class = "text-danger" })
+                </div>
+            </div>
+
+            <div class="form-group row" style="margin-left: 1px">
+                <div class=" col-lg-1 col-md-2 col-sm-3 col-4">
+                    <input type="submit" value="Save" class="btn btn-success" />
+                </div>
+                <div class=" col-lg-1 col-md-2 col-sm-3 col-4">
+                    @Html.ActionLink("Back to List", "Index", "Categories", null, new { @class = "btn btn-info" })
+                </div>
+            </div>
+        </div>
+        }
+    </div>
+</div>
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
 }
