--- a/Dr4rum_eProjectIII/Dr4rum_eProjectIII/Views/Categories/Index.cshtml
+++ b/Dr4rum_eProjectIII/Dr4rum_eProjectIII/Views/Categories/Index.cshtml
@@ -5,65 +5,89 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Index</h2>
-
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
-<table class="table">
-    <tr>
-        <th>
-            Category Name
-        </th>
-        <th>
-            Group Name
-        </th>
-        <th>
-            Deleted
-        </th>
-        <th></th>
-    </tr>
-
-    @foreach (var item in Model)
-    {
-        if (item.SetV == true)
-        {
+<!--scroll-top-Button-->
+<button onclick="topFunction()" id="scroll-top-Btn" title="Go to top">Top</button>
+<!-- Banner-->
+<div class="Banner-containt">
+    <img src="~/Image/Banner_Pic/Admin/adminIndex_banner.jpg" class="img-fluid" alt="Responsive image">
+    <div class="Banner-title-containt">
+        <p class="Banner-title-info"> Categories Page</p>
+        <p class="Banner-title-info" id="Banner-child"> Welcome to Categories Page, Let's manager your Page !</p>
+    </div>
+</div>
+<!-- breadcrumb-->
+<div class="breadcrumb-containt">
+    <div class="btn-group btn-breadcrumb breadcrumb-primary">
+        <a href="@Url.Action("Index", "AdminIndex")" class="btn btn-primary"><img src="~/Image/Logo_Icon/home-50.png" class="navbar-logo" alt="Site Logo" /></a>
+        @Html.ActionLink("Home", "Index", "AdminIndex", null, new { @class = "btn btn-primary breadcrumb-link" })
+        <div class="btn btn-info c-info breadcrumb-link"> Categories </div>
+    </div>
+</div>
+<!-- Information -->
+<div class="index-list-containt">
+    <div class="index-list">
+        <p>
+            @Html.ActionLink("Create New", "Create", "Categories", null, new { @class = "btn btn-success" })
+        </p>
+        <table class="table">
             <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Category_Name)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Group.Group_Name)
-                </td>
-                <td>
-                    <lable> Enable</lable>
-                </td>
-                <td>
-                    @Html.ActionLink("Edit", "Edit", new { id = item.Category_Name }) |
-                    @Html.ActionLink("Delete", "Delete", new { id = item.Category_Name })
-                </td>
+                <th>
+                    Category Name
+                </th>
+                <th>
+                    Group Name
+                </th>
+                <th>
+                    Deleted
+                </th>
+                <th></th>
             </tr>
-        }
-        else
-        {
-            <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Category_Name)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Group.Group_Name)
-                </td>
-                <td>
 
-                    <lable> Disable</lable>
-                </td>
-                <td>
+            @foreach (var item in Model)
+            {
+                if (item.SetV == true)
+                {
+                    <tr class="alert alert-info">
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Category_Name)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Group.Group_Name)
+                        </td>
+                        <td>
+                            <lable> Enable</lable>
+                        </td>
+                        <td>
+                            @Html.ActionLink("Edit", "Edit", "Categories", new { id = item.Category_Name }, new { @class = "btn btn-info" })
+                            @Html.ActionLink("Delete", "Delete", "Categories", new { id = item.Category_Name }, new { @class = "btn btn-danger" })
+                        </td>
+                    </tr>
+                }
+                else
+                {
+                    <tr class="alert alert-danger">
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Category_Name)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Group.Group_Name)
+                        </td>
+                        <td>
 
-                    @Html.ActionLink("Edit", "Edit", new { id = item.Category_Name }) |
-                    @Html.ActionLink("Recovery ", "Recovery_Category", new { id = item.Category_Name })
-                </td>
-            </tr>
-        }
-    }
+                            <lable> Disable</lable>
+                        </td>
+                        <td>
 
-</table>
+                            @Html.ActionLink("Edit", "Edit", "Categories", new { id = item.Category_Name }, new { @class = "btn btn-info" })
+                            @Html.ActionLink("Recovery", "Recovery_Category", "Categories", new { id = item.Category_Name }, new { @class = "btn btn-success" })
+                        </td>
+                    </tr>
+                }
+            }
+
+        </table>
+    </div>
+</div>
+@section Scripts{
+    <script src="~/Scripts/MyScript/indexFunction.js"></script>
+}
