--- a/Dr4rum_eProjectIII/Dr4rum_eProjectIII/Views/Groups/Index.cshtml
+++ b/Dr4rum_eProjectIII/Dr4rum_eProjectIII/Views/Groups/Index.cshtml
@@ -5,56 +5,78 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Index</h2>
-
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
-<table class="table">
-    <tr>
-        <th>
-            Group Name
-        </th>
-
-        <th>
-            Deleted
-        </th>
-    </tr>
-
-    @foreach (var item in Model)
-    {
-        if (item.SetV == true)
-        {
+<!--scroll-top-Button-->
+<button onclick="topFunction()" id="scroll-top-Btn" title="Go to top">Top</button>
+<!-- Banner-->
+<div class="Banner-containt">
+    <img src="~/Image/Banner_Pic/Admin/adminIndex_banner.jpg" class="img-fluid" alt="Responsive image">
+    <div class="Banner-title-containt">
+        <p class="Banner-title-info"> Groups Page</p>
+        <p class="Banner-title-info" id="Banner-child"> Welcome to Groups Page, Let's manager your Page !</p>
+    </div>
+</div>
+<!-- breadcrumb-->
+<div class="breadcrumb-containt">
+    <div class="btn-group btn-breadcrumb breadcrumb-primary">
+        <a href="@Url.Action("Index", "AdminIndex")" class="btn btn-primary"><img src="~/Image/Logo_Icon/home-50.png" class="navbar-logo" alt="Site Logo" /></a>
+        @Html.ActionLink("Home", "Index", "AdminIndex", null, new { @class = "btn btn-primary breadcrumb-link" })
+        <div class="btn btn-info c-info breadcrumb-link"> Groups </div>
+    </div>
+</div>
+<!-- Information -->
+<div class="index-list-containt">
+    <div class="index-list">
+        <p>
+            @Html.ActionLink("Create New", "Create", "Groups", null, new { @class = "btn btn-success" })
+        </p>
+        <table class="table">
             <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Group_Name)
-                </td>
-                <td>
-                    Enable
-                </td>
-                <td>
+                <th>
+                    Group Name
+                </th>
 
-                    @Html.ActionLink("Details", "Details", new { id = item.Group_Name }) |
-                    @Html.ActionLink("Delete", "Delete", new { id = item.Group_Name })
-                </td>
+                <th>
+                    Status
+                </th>
             </tr>
-        }
-        else
-        {
 
-            <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Group_Name)
-                </td>
-                <td>
-                    Disable
-                </td>
+            @foreach (var item in Model)
+            {
+                if (item.SetV == true)
+                {
+                    <tr class="alert alert-info">
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Group_Name)
+                        </td>
+                        <td>
+                            Enable
+                        </td>
+                        <td>
+                            @Html.ActionLink("Delete", "Delete", "Groups", new { id = item.Group_Name }, new { @class = "btn btn-danger" })
+                        </td>
+                    </tr>
+                }
+                else
+                {
 
-                <td>
-                    @Html.ActionLink("Details", "Details", new { id = item.Group_Name }) |
-                    @Html.ActionLink("Recovery", "Recovery_Groups", new { id = item.Group_Name })
-                </td>
-            </tr>}
-    }
+                    <tr class="alert alert-danger">
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Group_Name)
+                        </td>
+                        <td>
+                            Disable
+                        </td>
 
-</table>
+                        <td>
+                            @Html.ActionLink("Recovery", "Recovery_Groups", "Groups", new { id = item.Group_Name }, new { @class = "btn btn-success" })
+                        </td>
+                    </tr>}
+            }
+
+        </table>
+    </div>
+</div>
+@section Scripts{
+    <script src="~/Scripts/MyScript/indexFunction.js"></script>
+}
+
