--- a/Dr4rum_eProjectIII/Dr4rum_eProjectIII/Views/UserAccount/Information.cshtml
+++ b/Dr4rum_eProjectIII/Dr4rum_eProjectIII/Views/UserAccount/Information.cshtml
@@ -26,7 +26,7 @@
                     }
                     else
                     {
-                        <img style="width:200px" src="~/Image/avatar/@accountItem.Avatar" />
+                        <img style="width:200px" src="~/Image/avt/@accountItem.Avatar" />
                     }
                 </div>
                 <div class="Information-UserName col-12" style="margin-bottom: 10px;">
