--- a/Dr4rum_eProjectIII/Dr4rum_eProjectIII/Views/Posts/_PartialCreate.cshtml
+++ b/Dr4rum_eProjectIII/Dr4rum_eProjectIII/Views/Posts/_PartialCreate.cshtml
@@ -36,7 +36,7 @@
             </div>
 
             <div class="form-group row">
-                <div class="control-label col-md-12 TopicDelete-title">Topic information</div>
+                <div class="control-label col-md-12 TopicDelete-title">Post information</div>
                 <div class="col-md-12">
                     @Html.TextAreaFor(model => model.Post_Info, new { @class = "form-control EditPost-textArea" })
                     @Html.ValidationMessageFor(model => model.Post_Info, "", new { @class = "text-danger" })
@@ -58,8 +58,7 @@
             <div class="form-group hide">
                 <div class="col-md-10">
                     @{
-                        DateTime currentdate = DateTime.Now;
-                        var currDay = currentdate.ToString("dd/MM/yyyy");
+                        var currDay = DateTime.Now;
                     }
                     @Html.TextBoxFor(model => model.date, new { @Value = currDay, htmlAttributes = new { @class = "form-control" } })
                 </div>
