--- a/Dr4rum_eProjectIII/Dr4rum_eProjectIII/Views/Topics/Edit.cshtml
+++ b/Dr4rum_eProjectIII/Dr4rum_eProjectIII/Views/Topics/Edit.cshtml
@@ -80,7 +80,7 @@
                     @Html.LabelFor(model => model.date, htmlAttributes: new { @class = "control-label col-md-2" })
                     <div class="col-md-10">
                         @{
-                            var curentdate = DateTime.Now.ToString("dd/MM/yyyy");
+                            var curentdate = DateTime.Now;
                         }
                         @Html.TextBoxFor(model => model.date, new { @Value = curentdate, htmlAttributes = new { @class = "form-control" } })
                         @Html.ValidationMessageFor(model => model.date, "", new { @class = "text-danger" })
