--- a/Dr4rum_eProjectIII/Dr4rum_eProjectIII/Views/AdminPostManager/_PartialDelete.cshtml
+++ b/Dr4rum_eProjectIII/Dr4rum_eProjectIII/Views/AdminPostManager/_PartialDelete.cshtml
@@ -3,7 +3,8 @@
     .input {
         max-width: 100%;
     }
-    .textarea{
+
+    .textarea {
         height: 200px;
     }
 </style>
@@ -24,7 +25,7 @@
             </div>
             <div class="form-group">
                 <div class="col-sm-12">Post Info </div>
-                <div class="col-sm-12" >
+                <div class="col-sm-12">
                     @Html.TextAreaFor(model => model.Post_Info, new { @class = "form-control required input textarea", @disabled = "disabled" })
                 </div>
             </div>
@@ -38,4 +39,7 @@
         <input type="submit" id="btnDelete" ct_ma="@Model.Post_ID" value="Delete" class="btn btn-danger" />
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
     </div>
+}
+@section Scripts {
+    @Scripts.Render("~/bundles/jqueryval")
 }
