--- a/Dr4rum_eProjectIII/Dr4rum_eProjectIII/Views/Groups/Create.cshtml
+++ b/Dr4rum_eProjectIII/Dr4rum_eProjectIII/Views/Groups/Create.cshtml
@@ -54,43 +54,23 @@
 
                 <div class="form-group row" style="margin-left: 1px">
                     <div class=" col-lg-1 col-md-2 col-sm-3 col-4">
-                        <button type="button" class="btn btn-success" id="btnmodal" data-toggle="modal" data-target="#exampleModal"> Create</button>
+                        <!-- thay buton thanh the a va input-->
+                        <a onclick="return confirmAction()" href="~/Views/Groups/Index.cshtml" target="_parent"><input type="submit" onclick="confirmAction()" value="Create" /></a>
                     </div>  
                     <div class=" col-lg-1 col-md-2 col-sm-3 col-4">
                         @Html.ActionLink("Back to List", "Index","Groups",null,new { @class = "btn btn-info" })
                     </div>
                 </div>
-
-                <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                    <div class="modal-dialog" role="document">
-                        <div class="modal-content">
-                            <div class="modal-header">
-                                <h5 class="modal-title" id="M-title">Modal title</h5>
-                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                    <span aria-hidden="true">&times;</span>
-                                </button>
-                            </div>
-                            <div class="modal-body">
-                                The name of category is unique. After you create, you can not edit. Are you sure you want to create?
-                            </div>
-                            <div class="modal-footer">
-                                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                                <button type="submit" class="btn btn-primary">Save changes</button>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
             </div>
         }
     </div>
 </div>
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
-    <script type="text/javascript">
-        $("#btnmodal").click(function () {
-            $("#M-title").text("")
-            $("#M-title").text($("#title").val())
-        });
-    </script>
+    <!--thay javascrpit moi-->
+<script type="text/javascript">
+    function confirmAction() {
+        return confirm("The name of category is unique. After you create, you can not edit. Are you sure you want to create?")
+    }
+</script>
 }
