--- a/Dr4rum_eProjectIII/Dr4rum_eProjectIII/Views/Posts/_PartialCreate.cshtml
+++ b/Dr4rum_eProjectIII/Dr4rum_eProjectIII/Views/Posts/_PartialCreate.cshtml
@@ -60,7 +60,7 @@
                     @{
                         var currDay = DateTime.Now;
                     }
-                    @Html.TextBoxFor(model => model.date, new { @Value = currDay, htmlAttributes = new { @class = "form-control" } })
+                    <input type="date" name="date" value="@currDay.ToString("yyyy-MM-dd")" style="display: none" />
                 </div>
             </div>
         </div>
