--- a/Dr4rum_eProjectIII/Dr4rum_eProjectIII/Views/Topics/Create.cshtml
+++ b/Dr4rum_eProjectIII/Dr4rum_eProjectIII/Views/Topics/Create.cshtml
@@ -11,122 +11,122 @@
 <img src="~/Image/Banner_Pic/User/index_banner.jpg" class="img-fluid" alt="Responsive image">
 <!-- breadcrumb-->
 <div class="breadcrumb-containt">
-    <div class="btn-group btn-breadcrumb breadcrumb-primary">
-        <a href="@Url.Action("Index", "Index")" class="btn btn-primary"><img src="~/Image/Logo_Icon/home-50.png" class="navbar-logo" alt="Site Logo" /></a>
-        <a href="@Url.Action("Index", "Index")" class="btn btn-primary breadcrumb-link ">Home</a>
-        @Html.ActionLink("UserName", "ListGroup", new { }, new { @class = "btn btn-primary breadcrumb-link" })
-        @{
-        int ID = Convert.ToInt32(Session["ID"]);
-        }
-        @Html.ActionLink("List Topic", "Index", "Topics", new { id = ID }, new { @class = "btn btn-primary breadcrumb-link" })
-        <div class="btn btn-info c-info breadcrumb-link"> Add Topic </div>
+    <div class="breadcrumb-containt">
+        <div class="btn-group btn-breadcrumb breadcrumb-primary">
+            <a href="@Url.Action("Index", "Index")" class="btn btn-primary"><img src="~/Image/Logo_Icon/home-50.png" class="navbar-logo" alt="Site Logo" /></a>
+            <a href="@Url.Action("Index", "Index")" class="btn btn-primary breadcrumb-link ">Home</a>
+            @Html.ActionLink("UserName", "ListGroup", new { }, new { @class = "btn btn-primary breadcrumb-link" })
+            @{
+                int ID = Convert.ToInt32(Session["ID"]);
+            }
+            @Html.ActionLink("List Topic", "Index", "Topics", new { id = ID }, new { @class = "btn btn-primary breadcrumb-link" })
+            <div class="btn btn-info c-info breadcrumb-link"> Add Topic </div>
+        </div>
     </div>
-</div>
-<!-- main info-->
-<div class="index-list-containt">
-    <div class="index-list">
-        @using (Html.BeginForm("Create", "Topics", FormMethod.Post, new { enctype = "multipart/form-data" }))
-        {
-            @Html.AntiForgeryToken()
-            <h2 class="stitle mt-2 ml-2">
-                Create Topic
-            </h2>
-            <hr />
-            <div class="form-horizontal">
+    <!-- main info-->
+    <div class="index-list-containt">
+        <div class="index-list">
+            @using (Html.BeginForm("Create", "Topics", FormMethod.Post, new { enctype = "multipart/form-data" }))
+            {
+                @Html.AntiForgeryToken()
+                <h2 class="stitle mt-2 ml-2">
+                    Create Topic
+                </h2>
+                <hr />
+                <div class="form-horizontal">
 
-                @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-                <div class="form-group TopicDelete-title">
-                    @Html.LabelFor(model => model.Topic_Title, htmlAttributes: new { @class = "control-label col-md-2" })
-                    <div class="col-md-10">
-                        @Html.EditorFor(model => model.Topic_Title, new { htmlAttributes = new { @class = "form-control", id = "title" } })
-                        @Html.ValidationMessageFor(model => model.Topic_Title, "", new { @class = "text-danger" })
-                    </div>
-                </div>
-                <div class="form-group hide">
-                    @Html.LabelFor(model => model.Acc_ID, htmlAttributes: new { @class = "control-label col-md-2" })
-                    <div class="col-md-10">
-                        @Html.TextBoxFor(model => model.Acc_ID, new { @Value = ID, htmlAttributes = new { @class = "form-control" } })
-                    </div>
-                </div>
-
-                <div class="form-group TopicDelete-title">
-                    @Html.LabelFor(model => model.Category_Name, htmlAttributes: new { @class = "control-label col-md-2" })
-                    <div class="col-md-10">
-                        @Html.DropDownList("Category_Name", null, htmlAttributes: new { @class = "form-control" })
-                        @Html.ValidationMessageFor(model => model.Category_Name, "", new { @class = "text-danger" })
-                    </div>
-                </div>
-
-                <div class="form-group hide">
-                    @Html.LabelFor(model => model.setV, htmlAttributes: new { @class = "control-label col-md-2" })
-                    <div class="col-md-10">
-                        <div class="checkbox">
-                            @Html.CheckBoxFor(model => model.setV, new { @checked = "checked", htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                    <div class="form-group TopicDelete-title">
+                        @Html.LabelFor(model => model.Topic_Title, htmlAttributes: new { @class = "control-label col-md-2" })
+                        <div class="col-md-10">
+                            @Html.EditorFor(model => model.Topic_Title, new { htmlAttributes = new { @class = "form-control", id = "title" } })
+                            @Html.ValidationMessageFor(model => model.Topic_Title, "", new { @class = "text-danger" })
                         </div>
                     </div>
-                </div>
-
-                <div class="form-group ">
-                    <div class="control-label col-md-2 TopicDelete-title">Topic Info</div>
-                    <div class="col-md-12">
-                        @Html.TextAreaFor(model => model.Topic_Info)
-                        @Html.ValidationMessageFor(model => model.Topic_Info, "", new { @class = "text-danger" })
+                    <div class="form-group hide">
+                        @Html.LabelFor(model => model.Acc_ID, htmlAttributes: new { @class = "control-label col-md-2" })
+                        <div class="col-md-10">
+                            @Html.TextBoxFor(model => model.Acc_ID, new { @Value = ID, htmlAttributes = new { @class = "form-control" } })
+                        </div>
                     </div>
-                </div>
 
-                <div class="form-group hide">
-                    @Html.LabelFor(model => model.Report, htmlAttributes: new { @class = "control-label col-md-2" })
-                    <div class="col-md-10">
-                        @Html.TextBoxFor(model => model.Report, new { @Value = 0, htmlAttributes = new { @class = "form-control" }, disabled = "disabled" })
+                    <div class="form-group TopicDelete-title">
+                        @Html.LabelFor(model => model.Category_Name, htmlAttributes: new { @class = "control-label col-md-2" })
+                        <div class="col-md-10">
+                            @Html.DropDownList("Category_Name", null, htmlAttributes: new { @class = "form-control" })
+                            @Html.ValidationMessageFor(model => model.Category_Name, "", new { @class = "text-danger" })
+                        </div>
                     </div>
-                </div>
 
-                <div class="form-group hide">
-                    @Html.LabelFor(model => model.date, htmlAttributes: new { @class = "control-label col-md-2" })
-                    <div class="col-md-10">
-                        @{
-                            DateTime currentdate = DateTime.Now;
-                        }
-                        @Html.TextBoxFor(model => model.date, new { @Value = currentdate, htmlAttributes = new { @class = "form-control", disabled = "disabled" } })
-                        @Html.ValidationMessageFor(model => model.date, "", new { @class = "text-danger" })
-                    </div>
-                </div>
-                <div class="col-md-10">
-                    <!-- Button to Open the Modal -->
-                    <button type="button" class="btn btn-success" id="btnmodal" data-toggle="modal" data-target="#myModal">Create</button>
-                    @Html.ActionLink("List Topic", "Index", "Topics", new { ID = ID }, new { @class = "btn btn-info" })
-                </div>
-                <!-- The Modal -->
-                <div class="modal" id="myModal">
-                    <div class="modal-dialog">
-                        <div class="modal-content">
-                            <!-- Modal Header -->
-                            <div class="modal-header">
-                                <h4 class="modal-title" id="M-title">Modal Heading</h4>
-                                <button type="button" class="close" data-dismiss="modal">&times;</button>
-                            </div>
-                            <!-- Modal body -->
-                            <div class="modal-body">
-                                The title of topic is unique. After you posted, you can not edit. Are you sure you want to post?
-                            </div>
-                            <!-- Modal footer -->
-                            <div class="modal-footer">
-                                <input type="submit" style="background-color:deepskyblue" value="Sure" class="btn btn-default" />
-                                <button type="button" class="btn btn-danger" data-dismiss="modal">Cancle</button>
+                    <div class="form-group hide">
+                        @Html.LabelFor(model => model.setV, htmlAttributes: new { @class = "control-label col-md-2" })
+                        <div class="col-md-10">
+                            <div class="checkbox">
+                                @Html.CheckBoxFor(model => model.setV, new { @checked = "checked", htmlAttributes = new { @class = "form-control" } })
                             </div>
                         </div>
                     </div>
+
+                    <div class="form-group ">
+                        <div class="control-label col-md-2 TopicDelete-title">Topic Info</div>
+                        <div class="col-md-12">
+                            @Html.TextAreaFor(model => model.Topic_Info)
+                            @Html.ValidationMessageFor(model => model.Topic_Info, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
+
+                    <div class="form-group hide">
+                        @Html.LabelFor(model => model.Report, htmlAttributes: new { @class = "control-label col-md-2" })
+                        <div class="col-md-10">
+                            @Html.TextBoxFor(model => model.Report, new { @Value = 0, htmlAttributes = new { @class = "form-control" }, disabled = "disabled" })
+                        </div>
+                    </div>
+
+                    <div class="form-group hide">
+                        @Html.LabelFor(model => model.date, htmlAttributes: new { @class = "control-label col-md-2" })
+                        <div class="col-md-10">
+                            @{
+                                DateTime currentdate = DateTime.Now;
+                            }
+                            <input type="date" name="date" value="@currentdate.ToString("yyyy-MM-dd")" style="display: none" />
+                        </div>
+                    </div>
+                    <div class="col-md-10">
+                        <!-- Button to Open the Modal -->
+                        <button type="button" class="btn btn-success" id="btnmodal" data-toggle="modal" data-target="#myModal">Create</button>
+                        @Html.ActionLink("List Topic", "Index", "Topics", new { ID = ID }, new { @class = "btn btn-info" })
+                    </div>
+                    <!-- The Modal -->
+                    <div class="modal" id="myModal">
+                        <div class="modal-dialog">
+                            <div class="modal-content">
+                                <!-- Modal Header -->
+                                <div class="modal-header">
+                                    <h4 class="modal-title" id="M-title">Modal Heading</h4>
+                                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                                </div>
+                                <!-- Modal body -->
+                                <div class="modal-body">
+                                    The title of topic is unique. After you posted, you can not edit. Are you sure you want to post?
+                                </div>
+                                <!-- Modal footer -->
+                                <div class="modal-footer">
+                                    <input type="submit" style="background-color:deepskyblue" value="Sure" class="btn btn-default" />
+                                    <button type="button" class="btn btn-danger" data-dismiss="modal">Cancle</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-            </div>
-        }
+            }
+        </div>
     </div>
-</div>
-@section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
-    <script src="~/Content/ckeditor/ckeditor.js"></script>
-    <script src="~/Content/ckfinder/ckfinder.js"></script>
-    <script src="~/Scripts/MyScript/indexFunction.js"></script>
-    <script type="text/javascript">
+    @section Scripts {
+        @Scripts.Render("~/bundles/jqueryval")
+        <script src="~/Content/ckeditor/ckeditor.js"></script>
+        <script src="~/Content/ckfinder/ckfinder.js"></script>
+        <script src="~/Scripts/MyScript/indexFunction.js"></script>
+        <script type="text/javascript">
         var editor = CKEDITOR.instances['Topic_Info'];
         if (editor) { editor.destroy(true); }
         CKEDITOR.replace('Topic_Info', { enterMode: CKEDITOR.ENTER_BR, });
@@ -136,6 +136,6 @@
             $("#M-title").text("")
             $("#M-title").text($("#title").val())
         });
-    </script>
+        </script>
 
-}
+    }
