--- a/Dr4rum_eProjectIII/Dr4rum_eProjectIII/Views/Categories/Create.cshtml
+++ b/Dr4rum_eProjectIII/Dr4rum_eProjectIII/Views/Categories/Create.cshtml
@@ -63,7 +63,7 @@
                 <div class="form-group row" style="margin-left: 1px">
                     <div class=" col-lg-1 col-md-2 col-sm-3 col-4">
                         <!-- thay buton thanh the a va input-->
-                        <a onclick="return confirmAction()" href="~/Views/Categories/Index.cshtml" target="_parent"><input type="submit" onclick="confirmAction()" value="Create" /></a>
+                        <a onclick="return confirmAction()" href="~/Views/Categories/Index.cshtml" target="_parent"><input type="submit" onclick="confirmAction()" value="Create"  class="btn btn-success" /></a>
                     </div>
                     <div class=" col-lg-1 col-md-2 col-sm-3 col-4">
                         @Html.ActionLink("Back to List", "Index", "Categories", null, new { @class = "btn btn-info" })
