--- a/Dr4rum_eProjectIII/Dr4rum_eProjectIII/Views/Index/ListCategories.cshtml
+++ b/Dr4rum_eProjectIII/Dr4rum_eProjectIII/Views/Index/ListCategories.cshtml
@@ -22,16 +22,16 @@
         <div class="main-containt ">
             <div class="alert alert-warning  category-topic-titleContaint">
                 <div class="title-topicTitle">
-                    Tiêu Đề
+                    Title
                 </div>
                 <div class="title-topicDay">
-                    Ngày Đăng
+                    Date
                 </div>
                 <div class="title-topicPostnum">
-                    Số Bài Viết
+                    Post Num
                 </div>
                 <div class="title-topicPoster">
-                    Bài Viết Cuối
+                    New
                 </div>
             </div>
             @foreach (var Topic in Caterory.Topics.Where(t => t.setV == true).ToList())
