--- a/Dr4rum_eProjectIII/Dr4rum_eProjectIII/Views/UserAccount/Information.cshtml
+++ b/Dr4rum_eProjectIII/Dr4rum_eProjectIII/Views/UserAccount/Information.cshtml
@@ -22,7 +22,7 @@
                 <div class="Avatar col-12">
                     @if (accountItem.Avatar == null)
                     {
-                        <img style="width:200px" src="~/Image/avatar/shutterstock_534491617-600.jpg" />
+                        <img style="width:200px" src="~/Image/Logo_Icon/avatar-50.png" />
                     }
                     else
                     {
